# adl-ros2

./: .gitignore  404.html  README.md  docs-requirements.txt  index.html  live_positions.csv  mkdocs.yml  objects.inv  pyproject.toml  pyptoject.toml  pytest.ini  requirements-analysis.txt  requirements.txt  sitemap.xml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  docker-compose.yml  entrypoint.sh  post_create.sh  requirements.txt
adg_ros2_utils/: package.xml
arm_interfaces/: CMakeLists.txt  package.xml
arm_interfaces/action/: GotoEEVelocity.action
config/: experiment_configs.yaml
configs/controllers/: haptic_controller.yaml  joint_space_controller.yaml  probe_controller.yaml
configs/experiments/: experiment_configs.yaml
configs/gripper/: franka_gripper_example.yaml
docs/: README.md  gen_ref_pages.py  index.md
docs/developer-guide/: architecture.md  contributing.md  testing.md
docs/reference/: index.md
docs/tutorials/: index.md
docs/user-guide/: delay-rim.md  experiments.md  franka-server.md  getting-started.md  installation.md  quick-start.md
experiments/benchmarks/: README.md  README_enhanced.md  convert_pickle.py  plunge_validation.py  probing.py  probing_v2.py  simple_move.py  sin_tracking.py  sin_traj.py  sin_traj_enhanced.py
experiments/probing/: grid_generator.py  plunge_validation.py  probing_utilities.py  probing_v2.py  probing_waveguide_gripper.py  simple_move.py  simple_plot.py  waveguide_gripper_grid_generator.py
franka_controllers/: package.xml  setup.cfg  setup.py
franka_controllers/franka_controllers/: fr3_test.py  joint_position_controller.py
franka_sim/: package.xml  setup.py
franka_sim/config/: forward_position_publisher.yaml
franka_sim/isaac_envs/: simple_scene.usd
franka_sim/launch/: franka_sim.launch.py  isaac_demo.launch.py
haptics/joystick/: package.xml  setup.py
haptics/my_package/: package.xml  setup.py
isaac_joint_state_remapper/: package.xml  setup.cfg  setup.py
isaac_sim_ros/: setup.cfg  setup.py
isaac_sim_ros/isaac_envs/: fr3_simple_scene.usd
my_bringup/: package.xml  setup.py
my_bringup/config/: controllers.yaml  moveit_controllers.yaml
my_bringup/launch/: fr3_moveit.launch.py  franka.launch.py  test.launch.py  test_controller.launch.py  vel_pub.launch.py
my_controllers/: CMakeLists.txt
my_controllers/src/: test_controller.cpp
robot_arm/: README.md  package.xml  setup.py
robot_arm/arm_interfaces/: CMakeLists.txt  package.xml
robot_arm/fr3_controllers/: CMakeLists.txt  fr3_controllers.xml  package.xml
robot_arm/fr3_controllers/include/fr3_controllers/: cartesian_pose_controller.hpp  cartesian_vel_controller.hpp  joint_velocity_controller.hpp  motion_generator_cartesian.hpp  move_to_start_controller.hpp  my_controller.hpp  osc_pd_controller.hpp  robot_utils.hpp  test_controller.hpp
robot_arm/fr3_controllers/src/: cartesian_pose_controller.cpp  cartesian_vel_controller.cpp  joint_velocity_controller.cpp  motion_generator.cpp  motion_generator_cartesian.cpp  move_to_start_controller.cpp  my_controller.cpp  osc_pd_controller.cpp  test_controller.cpp
robot_arm/fr3_controllers/test/: test_my_controller.py
robot_arm/franka_rim/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
robot_arm/franka_rim/DelayRIM/: communication_line.py  local_processes.py  main_loop.py  math_helper_functions.py  multi_user_data.py
robot_arm/franka_rim/franka_rim/: __init__.py  delay_rim.py  delay_rim_debug.py  delay_rim_node.py  franka_model_node.py  franka_rim_node.py  haptic_simulator_node.py  i3_sim_node.py  simple_mass_system_node.py  visualization_node.py
robot_arm/franka_rim/include/franka_rim/: franka_rim_node.hpp  franka_robot_model.hpp
robot_arm/franka_rim/launch/: franka_rim.launch.py  simple_system.launch.py
robot_arm/franka_rim/rviz/: fr3_rim.rviz  simple_system.rviz
robot_arm/franka_rim/scripts/: find_latest_debug.py  plot_delay_rim_debug.py  replay_analysis.py
robot_arm/franka_rim/src/: franka_rim_node.cpp  franka_robot_model.cpp
robot_arm/franka_rim/test/: test_delay_rim_node.py  test_example.py  test_franka_model.py  test_franka_rim.py  test_franka_rim_node.py  test_matrix_reconstruction.py
robot_arm/franka_rim_cpp/: _CMakeLists.txt
robot_arm/isaac_sim_ros/: package.xml
robot_arm/my_controllers/: CMakeLists.txt  my_controllers.xml  package.xml
robot_arm/my_controllers/include/my_controllers/: joint_velocity_controller.hpp  test_controller.hpp
robot_arm/my_controllers/src/: joint_velocity_controller.cpp  test_controller.cpp
robot_arm/robot_arm/: FrankaArm.py
robot_arm/robot_arm_client/: package.xml  setup.cfg  setup.py
robot_arm/robot_arm_interface/: package.xml  setup.py
robot_arm/robot_arm_testing/: CMakeLists.txt  package.xml
robot_arm/scripts/: robot_arm_test.py  test.py
robot_arm_bringup/: package.xml  setup.py
robot_arm_bringup/config/: controllers.yaml
robot_arm_bringup/launch/: franka.launch.py
robot_arm_interface/: package.xml  pyptoject.toml  setup.py
robot_arm_interface/robot_arm_interface/: fr3_interface.py
robot_tasks/: README.md  package.xml  setup.py
robot_tasks/robot_tasks/: RLAgent.py  actions_20250521_144331.csv  actions_20250530_193528.csv  demo_68_actions.csv  mock_goal_source_service.py  rl_agent_gemini.py  shiyao_run_trained_agent.py  skrl_example.py  test_cuda.py
robot_tasks/rviz/: lift_env.rviz
robot_tasks/scripts/: fr3_insert.py  fr3_lift.py  fr3_rim.py
scripts/: analyze_rim_data.py  bag_data_processing.py  diagnostic_viewer.py  processing_config.yaml  rim_data_analysis.ipynb  ros_aliases.sh  run_rim_experiment.sh  test_install.py
search/: search_index.json
src/_legacy/: README.md
src/_legacy/teleop_interfaces/: CMakeLists.txt  package.xml
src/acoustic_sensing/: CMakeLists.txt  package.xml  package_backup.xml
src/acoustic_sensing/launch/: acoustic_receiver.launch.py
src/acoustic_sensing/msg/: AcousticPacket.msg
src/acoustic_sensing/scripts/: acoustic_plot_2receiver.py  acoustic_plot_receiver.py
src/acoustic_sensing/src/: acoustic_receiver_node.cpp
teleop/: README.md
(+229 files in other folders)
